8-k8s-ingress-loadbalancer-istio-gateway-multiple-subdomains/kubernetes/test-destination-rule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: test-app
  # namespace: production
spec:
  host: test-app.default.svc.cluster.local
  subsets:
    - name: test-app
      labels:
        app: test-app
